# doclayout-yolo-icraft

./: .gitignore  .gitmodules  download.ps1  download.sh  pyproject.toml  readme.md
1_scripts/: 0_infer.py  1_save.py  2_save_infer.py  3_sim_infer.py  visualize.py  yolov10_utils.py
2_compile/config/: yolov10n_8.toml
2_compile/qtset/: coco.txt
doclayout_2501/1_scripts/: 0_download_pdf_data.py  0_infer.py  1_save.py  2_save_infer.py  3_sim_infer.py  4_compare_tensor.py  analyze_time.py  download_pdf_data.py
doclayout_2501/2_compile/config/: doclayout_yolo_16.toml  doclayout_yolo_8.toml  doclayout_yolo_8_no_merge.toml  doclayout_yolo_8_resize.toml  doclayout_yolo_mix.toml  yolov10n_16.toml  yolov10n_8.toml
doclayout_2501/2_compile/config/customop/: yolov10.toml
doclayout_2501/2_compile/qtset/: pdf_imgs.txt
doclayout_2501/3_deploy/: .cursorignore  CMakeLists.txt  CMakePresets.json  Deps
doclayout_2501/3_deploy/cfg/: doclayout_yolo.yaml
doclayout_2501/3_deploy/modelzoo/doclayout_yolo/: CMakeLists.txt
doclayout_2501/3_deploy/modelzoo/doclayout_yolo/cfg/: doclayout_yolo.yaml
doclayout_2501/3_deploy/modelzoo/doclayout_yolo/io/: attention.txt  kimi_k2.txt
doclayout_2501/3_deploy/modelzoo/doclayout_yolo/modelzoo_utils/: NetInfo.hpp  icraft_utils.hpp  setup.py
doclayout_2501/3_deploy/modelzoo/doclayout_yolo/modelzoo_utils/pyrtutils/: __init__.py  calctime_utils.py  icraft_launcher.py  icraft_utils.py  modelzoo_utils.py  pyrt_main_example.py
doclayout_2501/3_deploy/modelzoo/doclayout_yolo/modelzoo_utils/pyrtutils/utils/: __init__.py  calc.py
doclayout_2501/3_deploy/modelzoo/doclayout_yolo/src/: doclayout_yolo.cpp  postprocess_yolov10.hpp  yolov10_utils.hpp
doclayout_2501/3_deploy/modelzoo_utils/pyrtutils/: Netinfo.py  analyze_time_utils.py  et_device.py
doclayout_2501/3_deploy/modelzoo_utils/pyrtutils/utils/: io.py  tools.py
doclayout_2501/3_deploy/names/: doclayout.names
doclayout_2501/3_deploy/src/: doclayout_yolo.cpp  postprocess_yolov10.hpp  yolov10_utils.hpp
yolov10/1_scripts/: 0_infer.py  1_save.py  2_save_infer.py  3_sim_infer.py  4_compare_tensor.py  visualize.py  yolov10_utils.py
yolov10/2_compile/config/: yolov10n_8.toml
yolov10/2_compile/qtset/: coco.txt
yolov10/3_deploy/modelzoo/yolov10/cfg/: yolov10.yaml
yolov10/3_deploy/modelzoo/yolov10/io/: coco.txt
yolov10/3_deploy/modelzoo/yolov10/io/output/: 000000000139.txt  000000001000.txt
yolov10/3_deploy/modelzoo/yolov10/src/: postprocess_yolov10.hpp  yolov10.cpp  yolov10_utils.hpp
